--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -5,6 +5,8 @@
   place-items: center;
   justify-content: center;
   position: relative;
+  z-index: 6;
+  background-color: var(--backgroundColor);
   opacity: 1;
   height: auto;
   margin: auto;
